[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://CodeEditor/CodeEditor.tscn" type="PackedScene" id=2]
[ext_resource path="res://CodeEditor/Fonts/ComicMono-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Manager.gd" type="Script" id=4]
[ext_resource path="res://Player.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[node name="World" type="Node2D"]

[node name="Manager" type="Node" parent="."]
script = ExtResource( 4 )

[node name="HTTPRequest" type="HTTPRequest" parent="Manager"]

[node name="UI" type="Control" parent="."]
margin_top = 1.0
margin_right = 1025.0
margin_bottom = 602.0

[node name="CodeEditor" parent="UI" instance=ExtResource( 2 )]

[node name="RunButton" type="Button" parent="UI"]
anchor_left = 1.0
anchor_top = 0.567
anchor_right = 1.0
anchor_bottom = 0.567
margin_left = -183.0
margin_top = -50.767
margin_right = -2.0
margin_bottom = 0.232971
custom_fonts/font = SubResource( 1 )
text = "Run"

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 492, 165 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 2 )

[connection signal="request_completed" from="Manager/HTTPRequest" to="Manager" method="_on_HTTPRequest_request_completed"]
[connection signal="button_up" from="UI/RunButton" to="Manager" method="_on_RunButton_button_up"]
